--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-  "rewrites": [
-    { "source": "/", "destination": "/web/index.html" },
-    { "source": "/ui", "destination": "/web/index.html" },
-    { "source": "/ui/demo/:path*", "destination": "/demo/:path*" },
-    { "source": "/ui/:path*", "destination": "/web/:path*" }
+  "builds": [
+    { "src": "web/**", "use": "@vercel/static" },
+    { "src": "demo/**", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "^/$", "dest": "/web/index.html" },
+    { "src": "^/ui$", "dest": "/web/index.html" },
+    { "src": "^/ui/demo/(.*)$", "dest": "/demo/$1" },
+    { "src": "^/ui/(.*)$", "dest": "/web/$1" }
   ],
   "headers": [
     {
